letter spacing + signup spacing fix

--- a/nella.css
+++ b/nella.css
@@ -31,7 +31,6 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 body {
     font-family: 'Gotham', serif;
-    letter-spacing: 1px;
     color: #160f31;
     width: 100%;
     overflow-x: hidden;
@@ -55,10 +54,11 @@ nav {
 }
 
 nav a {
-    padding: 0.2em;
-    margin: 0 1vmax;
-    font-weight: 600;
-    color: #b3b6af;
+	margin: 0 1vmax;
+	font-weight: 600;
+	color: #b3b6af;
+	display: inline-block;
+	font-size: calc(0.7em + 0.5vw);
 }
 
 .btn {
@@ -382,7 +382,7 @@ nav a {
     }
     
     #mini-signup form > * {
-        margin: 0 10px;
+        margin: 10px;
     }
 
     #story {
